Applied user menu to code. Saving persons in a vector. Renamed make_person.hpp to person_builder and made a new header named Person.hpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(.)
 
 add_executable(Ancestor_Tree
         main.cpp
-        make_person.hpp)
+        person_builder.hpp Person.hpp)
