added gender and id to person, fixed all text to camelCase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(.)
 
 add_executable(Ancestor_Tree
         main.cpp
-        person_builder.hpp person.hpp)
+        personBuilder.hpp person.hpp)
