--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 project(Ancestor_Tree)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-include_directories(.)
 
-add_executable(Ancestor_Tree
-        main.cpp
-        Include/personBuilder.hpp Include/person.hpp)
+add_subdirectory(tests)
+add_subdirectory(application)
