Refactored code. Added an app.hpp. That way main.cpp is cleaner. Also refactored switch case. Calling to function´s within the cases.

--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(Ancestor_Tree main.cpp)
+add_executable(Ancestor_Tree main.cpp app.hpp)
 target_include_directories(Ancestor_Tree PUBLIC "${CMAKE_SOURCE_DIR}/include")
