--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -5,6 +5,26 @@ name: Build
 on: [push, workflow_dispatch]
 
 jobs:
+  build-on-macOs:
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ macOs-latest ]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Configure and build
+        run: |
+          cmake . -B build
+          cmake --build build
+      - name: Test
+        run: |
+          cd build/tests
+          ctest --output-on-failure
+
   build-on-linux:
 
     runs-on: ${{ matrix.os }}
